--- a/P8105_HW5_ys3295.md
+++ b/P8105_HW5_ys3295.md
@@ -8,7 +8,7 @@ Read in the data.
 
 ``` r
 homicide_df = 
-  read_csv("data/homicide_data/homicide-data.csv") %>% 
+  read_csv("homicide_data/homicide-data.csv") %>% 
   mutate(
     city_state = str_c(city, state, sep = "_"),
     resolved = case_when(
@@ -103,7 +103,7 @@ city_prop_test = function(df) {
 
 
 homicide_df = 
-  read_csv("data/homicide_data/homicide-data.csv") %>% 
+  read_csv("homicide_data/homicide-data.csv") %>% 
   mutate(
     city_state = str_c(city, state, sep = "_"),
     resolved = case_when(
@@ -132,3 +132,53 @@ homicide_df =
     ##   lon = col_double(),
     ##   disposition = col_character()
     ## )
+
+# Problem 2
+
+Start with a datafram containing all file names.
+
+``` r
+names_df = list.files('lda_data')
+file_names_df = str_c("lda_data/",names_df)
+```
+
+Iterate over file names and read in data.\`
+
+Building up the dataset for the further analyses.
+
+``` r
+ tidy_long_data = 
+  long_data %>% 
+  separate(name, into = c("group","id","csv")) %>% 
+  select(-csv) %>% 
+  select(id,group,everything()) %>% 
+  pivot_longer(
+    week_1:week_8,
+    names_to = "week",
+    names_prefix = "week_",
+    values_to = "observational_value"
+  ) 
+```
+
+Making the spaghetti plot.
+
+``` r
+tidy_long_data %>% 
+  group_by(id,group) %>% 
+  ggplot(aes(x = week, y = observational_value, group = id,color = id)) + 
+  geom_line() + 
+  labs(
+    x = "weeks",
+    y = "observations",
+    caption = "Longitudinal Study for Control and Experimental Arm through Time") + 
+  theme(plot.caption = element_text(hjust=0))+
+  facet_grid(. ~ group)
+```
+
+<img src="P8105_HW5_ys3295_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+
+Several similarity and differences between control and experimental
+group are shown in the plots. The observation values is fluctuating
+during the 8 weeks. The figures indicates that the trend for control
+group kept in the same level overall through 8 weeks while the trend for
+experimental group is increasing during the period.
