--- a/P8105_HW5_ys3295.md
+++ b/P8105_HW5_ys3295.md
@@ -177,11 +177,10 @@ tidy_long_data %>%
 
 <img src="P8105_HW5_ys3295_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
 
-Several similarity and differences between control and experimental
-group are shown in the plots. The observation values is fluctuating
-during the 8 weeks. The figures indicates that the trend for control
-group tends to keep constant through 8 weeks while the experimental
-group showed an increasing trend during this period.
+  - The observation values is fluctuating during the 8 weeks. The
+    figures indicates that the trend for control group tends to keep
+    constant through 8 weeks while the experimental group showed an
+    increasing trend during this period.
 
 # Problem 3
 
@@ -242,6 +241,8 @@ sim_results =
   select(mu,estimate, p.value)
 ```
 
+Make a plot showing the proportion of times the null was rejected.
+
 ``` r
 test_df = 
   sim_results %>% 
@@ -269,5 +270,36 @@ test_df %>%
 
 <img src="P8105_HW5_ys3295_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
 
-  - The figure showed that as the effect size increase, the power will
-    increase.
+  - The figure showed that the power will increase with the effect size
+    increasing, given that alpha and sample size keep constant.
+
+Make two plots.
+
+``` r
+df = 
+  sim_results %>% 
+  mutate(
+    test_results = case_when(p.value < 0.05 ~ "reject",
+                            p.value >= 0.05 ~ "fail to reject")
+         ) %>%
+  group_by(mu) %>% 
+  mutate(est_mean = mean(estimate)) %>% 
+  ungroup() %>% 
+  group_by(mu, test_results) %>% 
+  filter(test_results == "reject") %>% 
+  mutate(est_mean_reject = mean(estimate)) %>% 
+  pivot_longer(
+    cols = c(est_mean, est_mean_reject),
+    names_to = "type",
+    values_to = "est_mean_mu"
+  )
+
+df %>% 
+  ggplot(aes(x = mu, y = est_mean_mu, color = type)) + 
+  geom_point() + 
+  geom_path()+
+  labs(title = "The average estimated mu vs. the true mu",
+       y= "average estimated mu")
+```
+
+<img src="P8105_HW5_ys3295_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
