--- a/P8105_HW5_ys3295.md
+++ b/P8105_HW5_ys3295.md
@@ -273,11 +273,12 @@ test_df %>%
   - The figure showed that the power will increase with the effect size
     increasing, given that alpha and sample size keep constant.
 
+-----
+
 Make two plots.
 
 ``` r
-df = 
-  sim_results %>% 
+df=sim_results %>% 
   mutate(
     test_results = case_when(p.value < 0.05 ~ "reject",
                             p.value >= 0.05 ~ "fail to reject")
@@ -287,14 +288,14 @@ df =
   ungroup() %>% 
   group_by(mu, test_results) %>% 
   filter(test_results == "reject") %>% 
-  mutate(est_mean_reject = mean(estimate)) %>% 
+  mutate(est_mean_rej = mean(estimate)) %>% 
   pivot_longer(
-    cols = c(est_mean, est_mean_reject),
+    cols = c(est_mean, est_mean_rej),
     names_to = "type",
     values_to = "est_mean_mu"
   )
 
-df %>% 
+df%>% 
   ggplot(aes(x = mu, y = est_mean_mu, color = type)) + 
   geom_point() + 
   geom_path()+
@@ -303,3 +304,13 @@ df %>%
 ```
 
 <img src="P8105_HW5_ys3295_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
+
+  - According to the plot, it is found that the sample average of
+    estimated mu across test for which the null is rejected is different
+    from the true mu. As the effect size increases, the sample average
+    estimated mu across test for which the null is rejected is closer or
+    approximately equals to the true value of mu. For the test in which
+    the null is rejected, the random error is larger. In other words, if
+    only estimated mu for these samples are calculated, larger random
+    error will be generated and the estimated mean will be more away
+    from the true mu.
